--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "axios": "^1.13.2",
     "lightweight-charts": "4.1.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-markdown": "^10.1.0"
   },
   "devDependencies": {
     "@types/node": "^22.19.3",
